prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      imagePullSecrets:
      - name: imagepull-docker
      containers:
      - name: hello-world1
        image: public.ecr.aws/nginx/nginx:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
