prod/grafana.virtulaservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: istio-system
spec:
  hosts:
  - grafana.blue.com
  gateways:
  - blue-gateway
  http:  
    route:
    - destination:
        host: hello-world
        port:
          number: 3000
